--- a/.env
+++ b/.env
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=blogg
+DB_DATABASE=kbsushi
 DB_USERNAME=root
-DB_PASSWORD=india123
+DB_PASSWORD=group5
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
