--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:0YcAj2X+SIYIJTABR9xaMwrE40VBUAJWp5zArGtMtDI=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost/
 
 LOG_CHANNEL=stack
 
